--- a/28-github-profiles/index.html
+++ b/28-github-profiles/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-  <form class="user-form" id="form">
-    <input type="text" id="search" placeholder="Search a Github User">
+  <form id="form" class="user-form">
+    <input id="search" type="text" placeholder="Search a Github User">
   </form>
 
   <main id="main"></main>
