--- a/32-good-cheap-fast/index.html
+++ b/32-good-cheap-fast/index.html
@@ -12,7 +12,7 @@
 <body>
   <h2>How do you want your project to be?</h2>
   <div class="toggle-container">
-    <input type="checkbox" id="good" class="toggle">
+    <input id="good" class="toggle" type="checkbox">
     <label for="good" class="label">
       <div class="ball"></div>
     </label>
@@ -20,7 +20,7 @@
   </div>
 
   <div class="toggle-container">
-    <input type="checkbox" id="cheap" class="toggle">
+    <input id="cheap" class="toggle" type="checkbox">
     <label for="cheap" class="label">
       <div class="ball"></div>
     </label>
@@ -28,7 +28,7 @@
   </div>
 
   <div class="toggle-container">
-    <input type="checkbox" id="fast" class="toggle">
+    <input id="fast" class="toggle" type="checkbox">
     <label for="fast" class="label">
       <div class="ball"></div>
     </label>
