--- a/39-password-strength-background/index.html
+++ b/39-password-strength-background/index.html
@@ -11,16 +11,16 @@
 </head>
 
 <body>
-  <div class="background" id="background"></div>
+  <div id="background" class="background"></div>
   <div class="bg-white rounded p-10 text-center shadow-md">
     <h1 class="text-3xl">Image Password Strength</h1>
     <p class="text-sm text-gray-700">Change the password to see the effect</p>
     <div class="my-4 text-left">
       <label for="email" class="text-gray-900">Email:</label>
       <input
-        type="text"
-        class="border block w-full p-2 mt-2 rounded"
         id="email"
+        class="border block w-full p-2 mt-2 rounded"
+        type="text"
         placeholder="Enter Email"
       />
     </div>
@@ -28,9 +28,9 @@
     <div class="my-4 text-left">
       <label for="email" class="text-gray-900">Password:</label>
       <input
-        type="password"
-        class="border block w-full p-2 mt-2 rounded"
         id="password"
+        class="border block w-full p-2 mt-2 rounded"
+        type="password"
         placeholder="Enter Password"
       />
     </div>
