--- a/42-live-user-filter/index.html
+++ b/42-live-user-filter/index.html
@@ -14,7 +14,7 @@
     <header class="header">
       <h4 class="title">Live User Filter</h4>
       <small class="subtitle">Search by name and/or location</small>
-      <input type="text" id="filter" placeholder="Search">
+      <input id="filter" type="text" placeholder="Search">
     </header>
 
     <ul id="result" class="user-list">
