--- a/47-testimonial-box-switcher/index.html
+++ b/47-testimonial-box-switcher/index.html
@@ -24,11 +24,7 @@
       transforms ART into PIXELS - without a glitch, every time.
     </p>
     <div class="user">
-      <img
-        src="https://randomuser.me/api/portraits/women/46.jpg"
-        alt="user"
-        class="user-image"
-      />
+      <img class="user-image" src="https://randomuser.me/api/portraits/women/46.jpg" alt="user">
       <div class="user-details">
         <h4 class="username">Miyah Myles</h4>
         <p class="role">Marketing</p>
