--- a/50-insect-catch-game/index.html
+++ b/50-insect-catch-game/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="screen">
     <h1>Catch The Insect</h1>
-    <button class="btn" id="start-btn">Play Game</button>
+    <button id="start-btn" class="btn">Play Game</button>
   </div>
 
   <div class="screen">
@@ -27,34 +27,25 @@
       <li>
         <button class="choose-insect-btn">
           <p>Mosquito</p>
-          <img
-              src="http://pngimg.com/uploads/mosquito/mosquito_PNG18175.png"
-              alt="mosquito"
-              />
+          <img src="http://pngimg.com/uploads/mosquito/mosquito_PNG18175.png" alt="mosquito">
         </button>
       </li>
       <li>
         <button class="choose-insect-btn">
           <p>Spider</p>
-          <img
-              src="http://pngimg.com/uploads/spider/spider_PNG12.png"
-              alt="spider"
-              />
+          <img src="http://pngimg.com/uploads/spider/spider_PNG12.png" alt="spider">
         </button>
       </li>
       <li>
         <button class="choose-insect-btn">
           <p>Roach</p>
-          <img
-              src="http://pngimg.com/uploads/roach/roach_PNG12163.png"
-              alt="roach"
-              />
+          <img src="http://pngimg.com/uploads/roach/roach_PNG12163.png" alt="roach">
         </button>
       </li>
     </ul>
   </div>
 
-  <div class="screen game-container" id="game-container">
+  <div id="game-container" class="screen game-container">
     <h3 id="time" class="time">Time: 00:00</h3>
     <h3 id="score" class="score">Score: 0</h3>
     <h5 id="message" class="message">
