--- a/27-toast-notification/index.html
+++ b/27-toast-notification/index.html
@@ -12,7 +12,7 @@
 <body>
   <div id="toasts"></div>
 
-  <button class="btn" id="button">Show Notification</button>
+  <button  id="button" class="btn">Show Notification</button>
 
   <script src="script.js"></script>
 </body>
