--- a/31-password-generator/index.html
+++ b/31-password-generator/index.html
@@ -15,34 +15,34 @@
     <h2>Password Generator</h2>
     <div class="result-container">
       <span id="result"></span>
-      <button class="btn" id="clipboard">
+      <button id="clipboard" class="btn">
         <i class="far fa-clipboard"></i>
       </button>
     </div>
     <div class="settings">
       <div class="setting">
         <label>Password Length</label>
-        <input type="number" id="length" min="4" max="20" value="20">
+        <input id="length" type="number" min="4" max="20" value="20">
       </div>
       <div class="setting">
         <label>Include uppercase letters</label>
-        <input type="checkbox" id="uppercase" checked>
+        <input id="uppercase" type="checkbox" checked>
       </div>
       <div class="setting">
         <label>Include lowercase letters</label>
-        <input type="checkbox" id="lowercase" checked>
+        <input id="lowercase" type="checkbox" checked>
       </div>
       <div class="setting">
         <label>Include numbers</label>
-        <input type="checkbox" id="numbers" checked>
+        <input id="numbers" type="checkbox" checked>
       </div>
       <div class="setting">
         <label>Include symbols</label>
-        <input type="checkbox" id="symbols" checked>
+        <input id="symbols" type="checkbox" checked>
       </div>
     </div>
 
-    <button class="btn btn-large" id="generate">
+    <button id="generate" class="btn btn-large">
       Generate Password
     </button>
   </div>
