--- a/33-notes-app/index.html
+++ b/33-notes-app/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <button class="add" id="add">
+  <button id="add" class="add">
     <i class="fas fa-plus"></i> Add note
   </button>
 
