--- a/36-hoverboard/index.html
+++ b/36-hoverboard/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div class="container" id="container"></div>
+  <div id="container" class="container"></div>
 
   <script src="script.js"></script>
 </body>
