--- a/37-pokedex/index.html
+++ b/37-pokedex/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <h1>Pokedex</h1>
-  <div class="poke-container" id="poke-container"></div>
+  <div id="poke-container" class="poke-container"></div>
 
   <!-- Design inspired by this Dribbble shot: https://dribbble.com/shots/5611109--Pokemon -->
   <script src="script.js"></script>
