--- a/43-feedback-ui-design/index.html
+++ b/43-feedback-ui-design/index.html
@@ -12,24 +12,24 @@
 
 <body>
   <div id="panel" class="panel-container">
-    <strong>How satisfied are you with our <br /> customer support performance?</strong>
+    <strong>How satisfied are you with our<br>customer support performance?</strong>
     <div class="ratings-container">
       <div class="rating">
-        <img src="https://image.flaticon.com/icons/svg/187/187150.svg" alt="">
+        <img src="https://image.flaticon.com/icons/svg/187/187150.svg">
         <small>Unhappy</small>
       </div>
 
       <div class="rating">
-        <img src="https://image.flaticon.com/icons/svg/187/187136.svg" alt=""/>
+        <img src="https://image.flaticon.com/icons/svg/187/187136.svg">
         <small>Neutral</small>
       </div>
 
       <div class="rating active">
-        <img src="https://image.flaticon.com/icons/svg/187/187133.svg" alt=""/>
+        <img src="https://image.flaticon.com/icons/svg/187/187133.svg">
         <small>Satisfied</small>
       </div>
     </div>
-    <button class="btn" id="send">Send Review</button>
+    <button id="send" class="btn">Send Review</button>
   </div>
   
   <script src="script.js"></script>
