--- a/44-custom-range-slider/index.html
+++ b/44-custom-range-slider/index.html
@@ -12,7 +12,7 @@
 <body>
   <h2>Custom Range Slider</h2>
   <div class="range-container">
-    <input type="range" id="range" min="0" max="100">
+    <input id="range" type="range" min="0" max="100">
     <label for="range">50</label>
   </div>
 
