--- a/46-quiz-app/index.html
+++ b/46-quiz-app/index.html
@@ -10,27 +10,27 @@
 </head>
 
 <body>
-  <div class="quiz-container" id="quiz">
+  <div id="quiz" class="quiz-container">
     <div class="quiz-header">
       <h2 id="question">Question text</h2>
       <ul>
         <li>
-          <input type="radio" name="answer" id="a" class="answer">
+          <input id="a" class="answer" type="radio" name="answer">
           <label for="a" id="a_text">Question</label>
         </li>
 
         <li>
-          <input type="radio" name="answer" id="b" class="answer">
+          <input id="b" class="answer" type="radio" name="answer">
           <label for="b" id="b_text">Question</label>
         </li>
 
         <li>
-          <input type="radio" name="answer" id="c" class="answer">
+          <input id="c" class="answer" type="radio" name="answer">
           <label for="c" id="c_text">Question</label>
         </li>
 
         <li>
-          <input type="radio" name="answer" id="d" class="answer">
+          <input id="d" class="answer" type="radio" name="answer">
           <label for="d" id="d_text">Question</label>
         </li>
       </ul>
