--- a/49-todo-list/index.html
+++ b/49-todo-list/index.html
@@ -12,11 +12,10 @@
 <body>
   <h1>todos</h1>
   <form id="form">
-    <input type="text" class="input" id="input" placeholder="Enter your todo" autocomplete="off">
-
-    <ul class="todos" id="todos"></ul>
+    <input id="input" class="input" type="text" placeholder="Enter your todo" autocomplete="off">
+    <ul id="todos" class="todos"></ul>
   </form>
-  <small>Left click to toggle completed. <br> Right click to delete todo</small>
+  <small>Left click to toggle completed.<br>Right click to delete todo</small>
 
   <script src="script.js"></script>
 </body>
